--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,33 @@
 annotated-types==0.7.0
 anyio==4.9.0
+asyncio==3.4.3
+beautifulsoup4==4.13.4
+certifi==2025.4.26
+charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
 fastapi==0.115.12
 h11==0.16.0
 idna==3.10
 Jinja2==3.1.6
+joblib==1.5.0
 MarkupSafe==3.0.2
+numpy==2.2.5
+pandas==2.2.3
 pydantic==2.11.4
 pydantic_core==2.33.2
+python-dateutil==2.9.0.post0
+pytz==2025.2
+requests==2.32.3
+scikit-learn==1.6.1
+scipy==1.15.2
+six==1.17.0
 sniffio==1.3.1
+soupsieve==2.7
 starlette==0.46.2
+threadpoolctl==3.6.0
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
 uvicorn==0.34.2
