--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,46 @@
-version: '3.9'
-
 services:
-  app:
+  fastapi:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: falsebait
+    container_name: fastapi_app
+    command: uvicorn main:app --host 0.0.0.0 --port 8000
     ports:
-      - "8000:8000"   # for FastAPI
-      - "8888:8888"   # for jupyter
-      - "7860:7860"   # for gradio
-    volumes:
-      - .:/falsebait
-    restart: unless-stopped
+      - "8000:8000"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://0.0.0.0:8000/docs"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    depends_on:
+      - jupyter
+
+  gradio:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: gradio_ui
+    command: python gradio_ui.py
+    ports:
+      - "7860:7860"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://0.0.0.0:7860"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    depends_on:
+      - fastapi
+
+  jupyter:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: jupyter_dev
+    command: jupyter notebook --ip=0.0.0.0 --port=8888 --no-browser --allow-root
+    ports:
+      - "8888:8888"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://0.0.0.0:8888"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
