--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,3 +44,33 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+
+  tests:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: test_runner
+    command: python test_unittests.py
+    depends_on:
+      - fastapi
+
+  supabase:
+    container_name: supabase_db
+    ports:
+      - "54321:5432" # Base de datos
+      - "54322:54322" # Studio (opcional)
+    env_file:
+      - .env
+    environment:
+      - SUPABASE_URL=${SUPABASE_URL}
+      - SUPABASE_KEY=${SUPABASE_KEY}
+    volumes:
+      - supabase_data:/var/lib/postgresql/data # This is postgres default data directory
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "postgres"] # Postgres integrated test to check if supabase is receiving and connecting to requests appropriately
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+volumes:
+  supabase_data:
