--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,20 +1,19 @@
 services:
+# ------------------------- FastAPI-----------------------------------------------
   fastapi:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: fastapi_app
-    command: uvicorn main:app --host 0.0.0.0 --port 8000
+    command: uvicorn main:falsebait --host 0.0.0.0 --port 8000
     ports:
-      - "8000:8000"
+      - "8000:8000" # Port exposed
     healthcheck:
       test: ["CMD", "curl", "-f", "http://0.0.0.0:8000/docs"]
       interval: 30s
       timeout: 10s
       retries: 3
-    depends_on:
-      - jupyter
-
+# ------------------------- Gradio UI---------------------------------------------
   gradio:
     build:
       context: .
@@ -22,7 +21,7 @@ services:
     container_name: gradio_ui
     command: python gradio_ui.py
     ports:
-      - "7860:7860"
+      - "7860:7860" # Port exposed
     healthcheck:
       test: ["CMD", "curl", "-f", "http://0.0.0.0:7860"]
       interval: 30s
@@ -30,17 +29,47 @@ services:
       retries: 3
     depends_on:
       - fastapi
-
-  jupyter:
+# # ------------------------- Jupyter Notebook--------------------------------------
+#   jupyter:
+#     build:
+#       context: .
+#       dockerfile: Dockerfile
+#     container_name: jupyter_dev
+#     command: jupyter notebook --ip=0.0.0.0 --port=8888 --no-browser --allow-root
+#     ports:
+#       - "8888:8888" # Port exposed
+#     healthcheck:
+#       test: ["CMD", "curl", "-f", "http://0.0.0.0:8888"]
+#       interval: 30s
+#       timeout: 10s
+#       retries: 3
+# ------------------------- Tests-------------------------------------------------
+  tests:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: jupyter_dev
-    command: jupyter notebook --ip=0.0.0.0 --port=8888 --no-browser --allow-root
+    container_name: test_runner
+    command: python test_unittests.py
+    depends_on:
+      - fastapi
+# ----------------- Supabase----------------------------------------------
+  supabase:
+    image: postgres:15
+    container_name: supabase_db
     ports:
-      - "8888:8888"
+      - "54321:5432" # Port exposed
+    env_file:
+      - .env
+    environment:
+      - SUPABASE_URL=${SUPABASE_URL}
+      - SUPABASE_KEY=${SUPABASE_KEY}
+    volumes:
+      - supabase_data:/var/lib/postgresql/data      # This is postgres default data directory
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://0.0.0.0:8888"]
+      test: ["CMD", "pg_isready", "-U", "postgres"] # Postgres integrated test to check if supabase is receiving and connecting to requests appropriately
       interval: 30s
       timeout: 10s
       retries: 3
+
+volumes:
+  supabase_data:
