--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 aiofiles==24.1.0
 annotated-types==0.7.0
 anyio==4.9.0
-asyncio==3.4.3
 audioop-lts==0.2.1
 beautifulsoup4==4.13.4
 certifi==2025.4.26
@@ -17,7 +16,7 @@ gradio_client==1.10.0
 groovy==0.1.2
 h11==0.16.0
 httpcore==1.0.9
-httpx==0.28.1
+httpx==0.24.1
 huggingface-hub==0.30.2
 idna==3.10
 Jinja2==3.1.6
@@ -25,7 +24,7 @@ joblib==1.5.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
-numpy==2.2.5
+numpy
 orjson==3.10.18
 packaging==25.0
 pandas==2.2.3
@@ -38,11 +37,11 @@ python-dateutil==2.9.0.post0
 python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
-requests==2.32.3
+requests==2.25.1
 rich==14.0.0
 ruff==0.11.8
 safehttpx==0.1.6
-scikit-learn==1.6.1
+scikit-learn
 scipy==1.15.2
 semantic-version==2.10.0
 shellingham==1.5.4
@@ -60,7 +59,6 @@ tzdata==2025.2
 urllib3==2.4.0
 uvicorn==0.34.2
 websockets==15.0.1
-gradio
-jupyterlab
-notebook
+# jupyterlab     JUPYTER causing issues while composing the docker since it seems is not compatible with supabase and supabase is needed for the project
 supabase
+pytest
