--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ pydub==0.25.1
 Pygments==2.19.1
 PyJWT==2.10.1
 pytest==8.3.5
+pytest-asyncio==0.26.0
 pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
