--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,28 +63,29 @@ services:
     depends_on:
       - fastapi
 # ----------------- Supabase----------------------------------------------
-  supabase:
-    image: postgres:15
-    container_name: supabase_db
-    ports:
-      - "54321:5432" # Port exposed
-    env_file:
-      - .env
-    environment:
-      - SUPABASE_URL=${SUPABASE_URL}
-      - SUPABASE_KEY=${SUPABASE_KEY}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_HOST=${POSTGRES_HOST}
+# This is to create a local database but since we are using a cloud db, there's no need for local.
+#   supabase:
+#     image: postgres:15
+#     container_name: supabase_db
+#     ports:
+#       - "54321:5432" # Port exposed
+#     env_file:
+#       - .env
+#     environment:
+#       - SUPABASE_URL=${SUPABASE_URL}
+#       - SUPABASE_KEY=${SUPABASE_KEY}
+#       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+#       - POSTGRES_USER=${POSTGRES_USER}
+#       - POSTGRES_DB=${POSTGRES_DB}
+#       - POSTGRES_HOST=${POSTGRES_HOST}
 
-    volumes:
-      - supabase_data:/var/lib/postgresql/data      # This is postgres default data directory
-    healthcheck:
-      test: ["CMD", "pg_isready", "-U", "postgres"] # Postgres integrated test to check if supabase is receiving and connecting to requests appropriately
-      interval: 30s
-      timeout: 10s
-      retries: 3
+#     volumes:
+#       - supabase_data:/var/lib/postgresql/data      # This is postgres default data directory
+#     healthcheck:
+#       test: ["CMD", "pg_isready", "-U", "postgres"] # Postgres integrated test to check if supabase is receiving and connecting to requests appropriately
+#       interval: 30s
+#       timeout: 10s
+#       retries: 3
 
-volumes:
-  supabase_data:
+# volumes:
+#   supabase_data:
