--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiohttp==3.11.18
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
+asyncio==3.4.3
 attrs==25.3.0
 audioop-lts==0.2.1
 beautifulsoup4==4.13.4
@@ -11,11 +12,13 @@ certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
+contourpy==1.3.2
+cycler==0.12.1
 deprecation==2.1.0
-dotenv==0.9.9
 fastapi==0.115.12
 ffmpy==0.5.0
 filelock==3.18.0
+fonttools==4.58.0
 frozenlist==1.6.0
 fsspec==2025.3.2
 gotrue==2.12.0
@@ -27,16 +30,20 @@ h2==4.2.0
 hpack==4.1.0
 httpcore==1.0.9
 httpx==0.28.1
-huggingface-hub==0.31.1
+huggingface-hub==0.30.2
 hyperframe==6.1.0
 idna==3.10
 iniconfig==2.1.0
 Jinja2==3.1.6
 joblib==1.5.0
+kiwisolver==1.4.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.10.3
 mdurl==0.1.2
+mpmath==1.3.0
 multidict==6.4.3
+networkx==3.4.2
 numpy==2.2.5
 orjson==3.10.18
 packaging==25.0
@@ -50,8 +57,8 @@ pydantic_core==2.33.2
 pydub==0.25.1
 Pygments==2.19.1
 PyJWT==2.10.1
+pyparsing==3.2.3
 pytest==8.3.5
-pytest-asyncio==0.26.0
 pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
@@ -60,12 +67,15 @@ pytz==2025.2
 PyYAML==6.0.2
 realtime==2.4.3
 requests==2.32.3
+requests-file==2.1.0
 rich==14.0.0
 ruff==0.11.8
 safehttpx==0.1.6
 scikit-learn==1.6.1
-scipy==1.15.3
+scipy==1.15.2
+seaborn==0.13.2
 semantic-version==2.10.0
+setuptools==80.4.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
@@ -75,8 +85,11 @@ storage3==0.11.3
 StrEnum==0.4.15
 supabase==2.15.1
 supafunc==0.9.4
+sympy==1.14.0
 threadpoolctl==3.6.0
+tldextract==5.3.0
 tomlkit==0.13.2
+torch==2.7.0
 tqdm==4.67.1
 typer==0.15.3
 typing-inspection==0.4.0
@@ -86,5 +99,3 @@ urllib3==2.4.0
 uvicorn==0.34.2
 websockets==14.2
 yarl==1.20.0
-nest_asyncio
-imbalanced-learn
